[package]
name = "appl"
authors = ["AribYadi <aribyadi@gmail.com>"]
description = """
Appl is a physics engine powered by Rapier. It is currently 2d only.
"""
homepage = "https://github.com/AribYadi/Appl.git"
repository = "https://github.com/AribYadi/Appl.git"
readme = "README.md"
keywords = ["physics", "2d", "rigid", "gamedev"]
categories = ["game-development", "simulation", "science", "mathematics"]
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = "0.11"
nalgebra = "0.29"

[dev-dependencies]
macroquad = "0.3"

[[example]]
name = "hello_world"
